# iroh-gleam

./: .gitignore  LICENSE  Makefile  README.md  gleam.toml  rebar.config  shell.nix
examples/ping/: gleam.toml  manifest.toml
examples/ping/src/: ping.gleam  server.gleam
native/iroh_nif/: Cargo.toml  build.sh
native/iroh_nif/.cargo/: config.toml
native/iroh_nif/src/: connection.rs  endpoint.rs  lib.rs  stream.rs  ticket.rs
src/: iroh.gleam  iroh_nif.erl
src/iroh/: connection.gleam  endpoint.gleam  incoming.gleam  stream.gleam  ticket.gleam
src/iroh/endpoint/: relay_mode.gleam
test/: iroh_test.gleam  secret_key.gleam
