[package]
name = "iroh_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "iroh_nif"
crate-type = ["cdylib"]

[dependencies]
iroh = "0.97.0"
iroh-tickets = "0.4.0"
once_cell = "1.19"
parking_lot = "0.12.5"
rand = "0.9.0"
rustler = "0.36.1"
tokio = { version = "1.36" }
tokio-util = "0.7.18"

[profile.dist]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
